# ottoneu-draft-assistant

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml
.claude/: settings.json
analysis/: predict_fpts.py
data/: load.py  merge.py  positions.py
db/: connection.py  init_db.py  queries.py  schema.py
ui/: draft_log.py  hitters_view.py  pitchers_view.py  roster_view.py  settings.py  sidebar.py
valuation/: __init__.py  dollar_value.py  historical.py  price_model.py  surplus.py
